Added Mapstruct Mapper instead of Spring Beanutils

--- a/service/build.gradle
+++ b/service/build.gradle
@@ -14,5 +14,13 @@ dependencies {
 	}
 	testImplementation("org.junit.jupiter:junit-jupiter-api")
 	testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine")
+
+	// Tentative Bean Mapping
+	implementation "org.mapstruct:mapstruct:1.4.2.Final"
+	annotationProcessor "org.mapstruct:mapstruct-processor:1.4.2.Final"
+
+	// If you are using mapstruct in test code
+	testAnnotationProcessor "org.mapstruct:mapstruct-processor:1.4.2.Final"
+
 }
 
