--- a/gradle.properties
+++ b/gradle.properties
@@ -1,2 +1,2 @@
-publishVersion=0.1-SNAPSHOT
-publishGroup=com.apgsga.apitesting
+publishVersion=0.3.3-SNAPSHOT
+publishGroup=com.apgsga.testing.sample
