--- a/service/build.gradle
+++ b/service/build.gradle
@@ -1,11 +1,9 @@
 description = 'Service module of the Sample Project for Apg Api Testing '
-jar {
-	archiveBaseName = 'api-testing-sample-server'
-}
 
 dependencies {
-	compile project(':api')
-	compile project(':db')
+	compile project(':api-testing-sample-api')
+	compile project(':api-testing-sample-db')
+	implementation group: 'com.google.guava', name: 'guava'
 	implementation 'org.springframework.boot:spring-boot-starter'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
 	testImplementation("org.springframework.boot:spring-boot-starter-test") {
