--- a/jbang-testscenarios/build.gradle
+++ b/jbang-testscenarios/build.gradle
@@ -6,6 +6,9 @@ description = 'JBang Testscenario Scripts'
 dependencies {
 	implementation project(':api-testing-sample-api')
 	implementation project(':api-testing-sample-client')
+	implementation("org.slf4j:slf4j-api")
+	implementation("org.junit.jupiter:junit-jupiter-api")
+
 }
 
 sourceSets {
