--- a/client/build.gradle
+++ b/client/build.gradle
@@ -23,6 +23,9 @@ shadowJar {
 dependencies {
 	implementation project(':api-testing-sample-api')
 	implementation project(':api-testing-sample-service')
+	implementation group: 'com.google.guava', name: 'guava'
+	implementation 'org.springframework.boot:spring-boot-starter'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
 	implementation 'org.springframework:spring-web'
 	implementation group: 'com.google.guava', name: 'guava'
 	implementation group: 'com.fasterxml.jackson.core', name: 'jackson-annotations'
