Client Configurable Direct / Rest , Bootstrapping Jbang

--- a/build.gradle
+++ b/build.gradle
@@ -2,10 +2,8 @@ plugins {
     id 'io.spring.dependency-management' version '1.0.4.RELEASE'
 }
 description = 'Parent Project for all Api Testing Sample'
-project.ext {
-    mavenLocalRepo = repositories.mavenLocal().url
-}
 
+println repositories.mavenLocal().url
 
 allprojects  {
     apply plugin: 'maven'
