Integrated Karate Tests (Java / Standalone)

--- a/tools/jbang/build.gradle
+++ b/tools/jbang/build.gradle
@@ -1,7 +1,7 @@
 plugins {
 	id 'dev.jbang' version '0.2.0'
 }
-description = 'JBang Testscenario Scripts'
+description = 'JBang Test Scripts'
 
 dependencies {
 	implementation project(':api-testing-sample-api')
@@ -11,6 +11,12 @@ dependencies {
 	implementation("org.junit.jupiter:junit-jupiter-api")
 
 }
+tasks.named ('jbang') {
+	script = 'tools/jbang/scripts/simple-test-scenario.java'
+	args = 'direct'
+}
+test.environment "JBANG_REPO", repositories.mavenLocal().url
+test.finalizedBy(jbang)
 
 sourceSets {
 	main {
