--- a/settings.gradle
+++ b/settings.gradle
@@ -5,7 +5,8 @@ include 'service'
 include 'client'
 include 'server'
 include 'utils'
-include 'jbang-testscenarios'
+include 'tools:jbang'
+include 'tools:karate'
 
 // Change subproject names
 
