Fixed Path Problem for JBang Eclipse / Windows

--- a/tools/jbang/build.gradle
+++ b/tools/jbang/build.gradle
@@ -1,6 +1,5 @@
 plugins {
-	// TODO (che, 8.6.21) : Doesn't work in eclipse and on windows
-	// id 'dev.jbang' version '0.2.0'
+	id 'dev.jbang' version '0.2.0'
 }
 description = 'JBang Test Scripts'
 
@@ -12,14 +11,15 @@ dependencies {
 	implementation("org.junit.jupiter:junit-jupiter-api")
 
 }
-// TODO (che, 8.6.21) : Doesn't work in eclipse and on windows
 
-//tasks.named ('jbang') {
-//	script = 'tools/jbang/scripts/simple-test-scenario.java'
-//	args = 'direct'
-//}
-//test.environment "JBANG_REPO", repositories.mavenLocal().url
-//test.finalizedBy(jbang)
+println projectDir
+
+tasks.named ('jbang') {
+	script = "$projectDir/scripts/simple-test-scenario.java"
+	args = 'direct'
+}Fix
+test.environment "JBANG_REPO", repositories.mavenLocal().url
+test.finalizedBy(jbang)
 
 sourceSets {
 	main {
